# weather_sys/font/weather_font/src/api/weather.js
@@ -4,6 +4,10 @@ export function getLatestWeather(params) {
   return request.get('/weather/latest', { params })
 }
 
+export function getWeatherDates(params) {
+  return request.get('/weather/dates', { params })
+}
+
 export function getWeatherTrend(params) {
   return request.get('/weather/trend', { params })
 }
